stt and tts added

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-OPENAI_API_KEY=<your-openai-api-key-here>
+GOOGLE_API_KEY=<your-google-api-key-here>
 TELEGRAM_TOKEN=<your-telegram-token-here>
-
+GROQ_API_KEY=<your-groq-api-key-here>
 SECRET_KEY=<your-secret-key-here>
 DEBUG=<True-or-False>
+HOST=<your deployed host or ngrok>
