--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,49 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.11.0
 asgiref==3.10.0
 asttokens==3.0.0
+attrs==25.4.0
+beautifulsoup4==4.14.2
+cachetools==6.2.1
 certifi==2025.10.5
+cffi==2.0.0
 charset-normalizer==3.4.4
 colorama==0.4.6
 comm==0.2.3
+dataclasses-json==0.6.7
 debugpy==1.8.17
 decorator==5.2.1
 distro==1.9.0
 Django==5.2.7
+django-filter==25.2
 djangorestframework==3.16.1
 dotenv==0.9.9
 executing==2.2.1
+ffmpeg==1.4
+filetype==1.2.0
+frozenlist==1.8.0
+google==3.0.0
+google-ai-generativelanguage==0.7.0
+google-api-core==2.28.1
+google-api-python-client==2.186.0
+google-auth==2.42.1
+google-auth-httplib2==0.2.1
+google-cloud-core==2.5.0
+google-cloud-modelarmor==0.3.0
+google-cloud-texttospeech==2.33.0
+googleapis-common-protos==1.71.0
+greenlet==3.2.4
+groq==0.33.0
+grpcio==1.76.0
+grpcio-status==1.71.2
 h11==0.16.0
 httpcore==1.0.9
+httplib2==0.31.0
 httpx==0.28.1
+httpx-sse==0.4.3
 idna==3.11
 ipykernel==7.1.0
 ipython==9.6.0
@@ -27,36 +55,61 @@ jsonpointer==3.0.0
 jupyter_client==8.6.3
 jupyter_core==5.9.1
 langchain==1.0.3
+langchain-classic==1.0.0
+langchain-community==0.4.1
 langchain-core==1.0.2
+langchain-google-community==3.0.0
+langchain-google-genai==3.0.0
 langchain-openai==1.0.1
+langchain-text-splitters==1.0.0
 langgraph==1.0.2
 langgraph-checkpoint==3.0.0
 langgraph-prebuilt==1.0.2
 langgraph-sdk==0.2.9
 langsmith==0.4.39
+marshmallow==3.26.1
 matplotlib-inline==0.2.1
+multidict==6.7.0
+mypy_extensions==1.1.0
 nest-asyncio==1.6.0
+numpy==2.3.4
 openai==2.6.1
+opuslib==3.0.1
 orjson==3.11.4
 ormsgpack==1.11.0
 packaging==25.0
 parso==0.8.5
+pillow==12.0.0
 platformdirs==4.5.0
 prompt_toolkit==3.0.52
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==5.29.5
 psutil==7.1.2
 pure_eval==0.2.3
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pycparser==2.23
 pydantic==2.12.3
+pydantic-settings==2.11.0
 pydantic_core==2.41.4
+pydub==0.25.1
 Pygments==2.19.2
+pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
+python-telegram-bot==22.5
 PyYAML==6.0.3
 pyzmq==27.1.0
 regex==2025.10.23
 requests==2.32.5
 requests-toolbelt==1.0.0
+rsa==4.9.1
 six==1.17.0
 sniffio==1.3.1
+soundfile==0.13.1
+soupsieve==2.8
+SQLAlchemy==2.0.44
 sqlparse==0.5.3
 stack-data==0.6.3
 tenacity==9.1.2
@@ -64,10 +117,13 @@ tiktoken==0.12.0
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+typing-inspect==0.9.0
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 tzdata==2025.2
+uritemplate==4.2.0
 urllib3==2.5.0
 wcwidth==0.2.14
 xxhash==3.6.0
+yarl==1.22.0
 zstandard==0.25.0
